# lowart-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README-zh.md  README.md  docker-compose.yml
api-server/: Cargo.toml  test_1ad9ab8d-419f-41e2-9047-4bb63f413fb6.db  test_243f45df-551d-4ecf-a1cc-892accb95ad1.db  test_3da2b2f8-40ed-4da7-a9aa-e996b5efdfcb.db  test_5a49979f-9f73-4e28-9f18-00472d9927a8.db  test_6fe3124b-ee3c-4d2a-96c1-6de790c4812f.db  test_7a7339cc-2690-43c9-8e2c-adbc5ec31afd.db  test_7fc60c9c-d05a-41d3-b3c8-9cd9d024decc.db  test_82b39851-ad6a-4b4f-be4c-fe7d73c03e8f.db  test_8c777d5b-2211-4c95-bb72-20f6a11e97ac.db  test_8e8e5c39-78d7-4242-918d-2ab0a8d787fc.db  test_ae538fc5-de27-423b-968b-106d0a2934fb.db  test_af153ba2-3bcd-41cd-a943-1b639679559c.db  test_cbaeb5e4-e61c-4d99-b0fe-08e04ab5eb44.db  test_f8313d49-5da2-4774-9b5b-7cbf0d0cc133.db  test_ff8e6582-ab12-4497-9ef6-20b8ab785256.db
api-server/src/: admin_handlers.rs  admin_middleware.rs  auth_middleware.rs  handlers.rs  lib.rs  limit_middleware.rs  main.rs  metrics_middleware.rs  router.rs  stats_middleware.rs
api-server/tests/: integration_tests.rs
api-server/tests/ignore/: test_1ffe9356-2f61-4f60-84fd-6e06885527f8.db  test_2315af37-710b-4402-9606-231521b8d7e9.db  test_2330a3ba-fb39-4315-92a0-e1e66a80174d.db  test_44750731-0a3a-4de1-a887-8c5d58f1ef26.db  test_480cb14d-3897-4cba-9531-7c44048ff624.db  test_502f44ff-abf7-4e26-9143-4abec41fa9b2.db  test_6d1356ef-3233-4663-bd81-a2365a1184d8.db  test_72896112-bb24-42c4-921e-6c462cb07aba.db  test_a4836de2-88f8-4448-af13-7e7384667507.db  test_af5b8a51-ff54-4231-ba9c-11f344eb0024.db  test_e4fa1649-79f3-4642-9253-ae03b0f24c03.db  test_fe97e8ef-9325-4446-ac87-b0eee1d7148b.db
auth/: Cargo.toml
auth/src/: lib.rs  manager.rs  user.rs
core/: Cargo.toml
core/src/: lib.rs  mcp_manager.rs  model_manager.rs  request_context.rs  rhai_engine.rs
db/: Cargo.toml
db/migrations/: 01_initial_schema.sql  02_add_quotas.sql  02_seed_admin.sql  03_add_stat_type_to_usage_stats.sql  03_add_tool_policies.sql  04_add_admin_flag.sql  04_add_api_keys_table.sql  05_add_session_store.sql  06_add_async_jobs.sql  07_add_fallbacks.sql
db/src/: api_key_repo.rs  config_repo.rs  connection.rs  fallback_repo.rs  job_repo.rs  lib.rs  models.rs  schema.rs  session_repo.rs  stats_repo.rs  tool_policy_repo.rs  user_repo.rs
doc/: Lowart-api: 轻量级、网络与本地兼容的 Rust AI API 服务 (最终修订版).md  用户请求流程.md
docs/: tutorial-zh.md  tutorial.md
lowart-admin/: nuxt.config.ts  package-lock.json  package.json
lowart-admin/app/assets/css/: main.css
lowart-admin/app/composables/: useApi.ts  useMarkdown.ts
lowart-admin/app/layouts/: default.vue
lowart-admin/app/middleware/: auth.global.ts
lowart-admin/app/pages/: chat.vue  index.vue  login.vue  logs.vue  models.vue  users.vue
lowart-admin/app/stores/: auth.ts
lowart-core/: Cargo.toml
lowart-core/src/: agent_orchestrator.rs  circuit_breaker.rs  lib.rs  mcp_manager.rs  model_manager.rs  token_counter.rs
models/: Cargo.toml
models/src/: anthropic_api.rs  comfyui_api.rs  lib.rs  mock_api.rs  openai_api.rs  traits.rs
protocols/: Cargo.toml
protocols/src/: a2a.rs  lib.rs  mcp.rs  sse.rs  stdio_mcp_client.rs
utils/: Cargo.toml
utils/src/: crypto.rs  lib.rs  logger.rs
