[workspace]
resolver = "2"
members = [
    "api-server",
    "core",
    "protocols",
    "models",
    "db",
    "auth",
    "utils",
]

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.37", features = ["full"] }
# 序列化与反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志处理
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 异步 Trait 支持
async-trait = "0.1"
# 数据库 (使用 SQLx)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
# 脚本引擎
rhai = { version = "1.17", features = ["serde", "sync"] }


# Token 计算
tiktoken-rs = "0.5"
# 网络请求
reqwest = { version = "0.12", features = ["json", "stream"] }
# 各种协议支持
futures = "0.3"
# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# 加密
aes-gcm = "0.10"
base64 = "0.22"
getrandom = "0.2"
dashmap = "6.0"
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }





