[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
utils = { path = "../utils" }
auth = { path = "../auth" }
db = { path = "../db" }
models = { path = "../models" }
tokio.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true
hyper-util.workspace = true
tower.workspace = true
hyper.workspace = true
uuid.workspace = true



# Axum for API server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
