[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
models = { path = "../models" }
db = { path = "../db" }
protocols = { path = "../protocols" }
rhai.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
