[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio.workspace = true
